--- a/src/main/resources/templates/LayoutPadrao.html
+++ b/src/main/resources/templates/LayoutPadrao.html
@@ -9,9 +9,13 @@
 	<title>Cobrança</title>
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="sytlesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap-datepicker.standalone.min.css">	
 	<script src="/js/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-	
+	<script src="/js/cobranca.js"></script>
+	<script src="/js/bootstrap-datepicker.min.js"></script>
+	<script src="/js/bootstrap-datepicker.pt-BR.min.js"></script>
+
 </head>
 
 <body>
