--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -10,6 +10,8 @@
 </head>
 
 <section layout:fragment="conteudo">
+	<div th:replace="MensagemGeral"></div>
+
 	<div class="card card-default">
 		<div class="card-heading">
 			<div  class="clearfix">
@@ -42,10 +44,19 @@
 						
 						</td>
 						<td class="text-center">
+							<a class="btn btn-link btn-xs" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}"
+							title="Editar" rel="tooltip" data-placement="top">
+								<span class="glyphicon glyphicon-pencil"></span>							
+							</a>	
+							
+							<a class="btn btn-link btn-xs" data-toggle="modal" data-target="#confirmacaoExclusaoModal"
+								th:attr="data-codigo=${titulo.codigo}, data-descricao=${titulo.descricao}"
+								title="Excluir" rel="tooltip" data-placement="top"
+								>
+								<span class="glyphicon glyphicon-remove"></span>							
+							</a>										
 						
-						
-						</td>
-						
+						</td>					
 											
 					</tr>
 					<tr>
@@ -54,7 +65,10 @@
 				</tbody>					
 			
 			</table>		
-		</div>			
+		</div>
+			
+			<div th:replace="DialogoConfirmacaoExclusao"></div>
+					
 	</div>
 </section>
 
