--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -21,6 +21,25 @@
 		</div>
 		
 		<div class="card-body">
+			<form METHOD="GET" class="form-horizontal">
+				<div class="form-group">
+					<div class="col-sm-4">
+						<div class="input-group">
+							<input class="form-control" placeholder="Qual título você está procurando"
+								autofocus="autofocus"
+							></input>	
+							<span class="input-group-btn">
+								<button type="submit" class="btn btn-default">
+									<i class="glyphicon glyphicon-search"></i>
+								</button>							
+							</span>						
+						</div>
+					</div>				
+				</div>
+			</form>
+		
+		
+		
 			<table class="table table-bordered table-striped">
 				<thead>
 					<tr>
@@ -38,7 +57,7 @@
 						<td th:text="${titulo.descricao}"></td>
 						<td class="text-center" th:text="${{titulo.dataVencimento}}"></td>
 						<td class="text-center" th:text="|R$ ${{titulo.valor}} |"></td>
-						<td class="text-center" >
+						<td class="text-center" th:attr="data-role=${titulo.codigo}" >
 							<span class="label" th:text="${titulo.status.descricao}"
 								th:classappend="${titulo.pendente ? 'label-danger' : 'label-success'}"></span>						
 						
@@ -54,7 +73,15 @@
 								title="Excluir" rel="tooltip" data-placement="top"
 								>
 								<span class="glyphicon glyphicon-remove"></span>							
-							</a>										
+							</a>	
+							<a class="btn btn-link btn-xs js-atualizar-status" th:if="${titulo.pendente}"								
+							 title="Receber" rel="tooltip" data-placement="top"
+							 th:attr="data-codigo=${titulo.codigo}"
+							 th:href="@{/titulos/{codigo}/receber(codigo=${titulo.codigo})}" >
+								<span class="glyphicon glyphicon-check"></span>						
+							
+							</a>					
+																
 						
 						</td>					
 											
