--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,15 @@
+
+@media(min-width:768px){
+	.card-default{
+		margin-left:10px;
+		margin-right:10px;	
+	}
+	.alert{
+		margin-left:10px;
+		margin-right:10px;
+	}
+}
+
 .navbar-brand{
 	padding-top:7px;
 }
