--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -21,13 +21,12 @@
 		</div>
 		
 		<div class="card-body">
-			<form METHOD="GET" class="form-horizontal">
+			<form method="GET" class="form-horizontal" action="/titulos" th:object="${filtro}">
 				<div class="form-group">
 					<div class="col-sm-4">
 						<div class="input-group">
 							<input class="form-control" placeholder="Qual título você está procurando"
-								autofocus="autofocus"
-							></input>	
+								autofocus="autofocus" th:field="*{descricao}"></input>	
 							<span class="input-group-btn">
 								<button type="submit" class="btn btn-default">
 									<i class="glyphicon glyphicon-search"></i>
@@ -39,7 +38,7 @@
 			</form>
 		
 		
-		
+			<div class="table-responsive">
 			<table class="table table-bordered table-striped">
 				<thead>
 					<tr>
@@ -78,10 +77,8 @@
 							 title="Receber" rel="tooltip" data-placement="top"
 							 th:attr="data-codigo=${titulo.codigo}"
 							 th:href="@{/titulos/{codigo}/receber(codigo=${titulo.codigo})}" >
-								<span class="glyphicon glyphicon-check"></span>						
-							
-							</a>					
-																
+								<span class="glyphicon glyphicon-check"></span>									
+							</a>																		
 						
 						</td>					
 											
@@ -91,7 +88,8 @@
 					</tr>				
 				</tbody>					
 			
-			</table>		
+			</table>	
+			</div>	
 		</div>
 			
 			<div th:replace="DialogoConfirmacaoExclusao"></div>
